# date-a-scientist

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
date_a_scientist/: __init__.py  agent.py  exceptions.py
ops/: check_format.yaml  format.yaml  install.yaml  lint.yaml  precommit.yaml  publish.yaml  test.yaml
tests/: __init__.py  conftest.py  test_date_a_scientist.py  test_notebook.ipynb  test_notebook__cache.ipynb
